# crates_llms_txt

./: .gitignore  Cargo.toml  README.md  deno.json  dprint.json  rust-toolchain.toml  rustfmt.toml
.github/workflow/: publish.yml
.github/workflows/: CI.yml  lint.yml  publish.yml  rust-release.yml  test.yml
js/: build.ts  crates_llms_txt.js  deno.json
jsr/: README.md  crates_llms_txt.d.ts  crates_llms_txt.internal.js  crates_llms_txt.js  crates_llms_txt.wasm  deno.json  mod.ts
jsr/test/: get_llms_config.test.ts  get_llms_config_rustdoc.ts
jsr/test/__snapshots__/: get_llms_config.test.ts.snap
jsr/tests/: get_llms_config_rustdoc.test.ts
jsr/tests/__snapshots__/: get_llms_config.test.ts.snap
lib/: README.md  crates_llms_txt.js  crates_llms_txt.wasm  deno.json  mod.ts
lib/test/__snapshots__/: get_llms_config.test.ts.snap
napi/: Cargo.toml  README.md  index.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
napi/__test__/: index.spec.ts
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/linux-arm-gnueabihf/: README.md  package.json
napi/npm/linux-arm64-gnu/: README.md  package.json
napi/npm/linux-arm64-musl/: README.md  package.json
napi/npm/linux-riscv64-gnu/: README.md  package.json
napi/npm/linux-x64-gnu/: README.md  package.json
napi/npm/linux-x64-musl/: README.md  package.json
napi/npm/win32-arm64-msvc/: README.md  package.json
napi/npm/win32-ia32-msvc/: README.md  package.json
napi/npm/win32-x64-msvc/: README.md  package.json
napi/patches/: @napi-rs__cli@3.0.0-alpha.84.patch
napi/src/: lib.rs
npm/: README.md  build.ts  crates_llms_txt.d.ts  crates_llms_txt.internal.js  crates_llms_txt.js  deno.json  mod.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
npm/src/: index.ts  types.ts  utils.ts
npm/tests/: all_features.test.ts  features.test.ts  online.test.ts
npm/tests/__snapshots__/: online.test.ts.snap
rs-lib/: Cargo.toml  README.md
rs-lib/src/: error.rs  fetch_docs.rs  gen_docs.rs  lib.rs  temp_trait.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
