[package]
name = "crates_llms_txt"
version = "0.0.2"
edition = "2021"
description = "A Rust library for generating llms.txt and llms-full.txt files"
homepage = "https://github.com/kingsword09"
repository = "https://github.com/kingsword09/crates-llms-txt"
authors = ["Kingsword kingsword09 <kingsword09@gmail.com>"]
license = "MIT"
include = ["src/*.rs", "README.md"]

[dependencies]
reqwest = { version = "^0.12.18", features = ["json", "zstd"] }
rustdoc-types = "0.41.0"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
zstd = "0.13.3"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
