[package]
name = "crates_llms_txt"
version = "0.1.0"
edition = "2021"
description = "A Rust library for generating llms.txt and llms-full.txt files"
homepage = "https://github.com/kingsword09"
repository = "https://github.com/kingsword09/crates-llms-txt"
authors = ["Kingsword kingsword09 <kingsword09@gmail.com>"]
license = "MIT"
include = ["src/*.rs", "README.md"]

[lib]
name = "crates_llms_txt"
path = "src/lib.rs"

[features]
default = []
rustdoc = ["rustdoc-json-stable"]

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "^0.12.18", features = ["json", "zstd"] }
rustdoc-json-stable = { version = "=0.9.7-patch.1", optional = true }

rustdoc-types = "0.55.0"
rustversion = "1.0.21"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
thiserror = "2.0.12"
zstd = "0.13.3"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
