[package]
name = "crates_llms_txt_wasm"
version = "0.0.0"
edition = "2021"
description = "A Rust library for generating llms.txt and llms-full.txt files"
homepage = "https://github.com/kingsword09"
repository = "https://github.com/kingsword09/crates-llms-txt"
authors = ["Kingsword kingsword09 <kingsword09@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "crates_llms_txt"

[dependencies]
crates_llms_txt = { path = "../rs-lib" }
js-sys = { version = "=0.3.77" }
wasm-bindgen = { version = "=0.2.100" }
wasm-bindgen-futures = { version = "=0.4.50" }
serde-wasm-bindgen = "0.5.0"